# jrpc-backpack

./: .gitignore  jrpc.cabal
app/: Main.hs
src/: JRPC.hs
src-impl/JRPC/: Impl.hs
src-indef/JRPC/: Indef.hs  Sig.hsig
src-types/JRPC/: Types.hs
src/JRPC/: Internal.hs
